--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,16 +16,16 @@
 
 <div class="component-block strict">
     <div class="center" class="form-group">
-        <form autocomplete="off">
+        <form [formGroup]="cadastroForm" autocomplete="off">
             <p class="title">Peça sua conta e cartão de crédito do Gama Bank</p>
 
-            <input type="text" autocomplete="off" id="cadastroCPF" name="cadastroCPF" value="" placeholder="Digite seu CPF"/>
-            <input type="text" autocomplete="off" id="cadastroUsuario" name="cadastroUsuario" value="" placeholder="Escolha um nome de usuário"/>
-            <input type="text" autocomplete="off" id="cadastroNomeCompleto" name="cadastroNomeCompleto" value="" placeholder="Nome completo"/>
-            <input type="password" autocomplete="off" id="cadastroSenha" name="cadastroSenha" value="" placeholder="Digite sua senha"/>
-            <input type="password" autocomplete="off" id="cadastroSenhaConfirmation" name="cadastroSenhaConfirmation" value="" placeholder="Confirme sua senha"/>
+            <input type="text" formControlName="cpf" autocomplete="off" value="" placeholder="Digite seu CPF" mask="000.000.000-00" />
+            <input type="text" formControlName="login" autocomplete="off" value="" placeholder="Escolha um nome de usuário"/>
+            <input type="text" formControlName="nome" autocomplete="off" value="" placeholder="Nome completo"/>
+            <input type="password" formControlName="senha" autocomplete="off" value="" placeholder="Digite sua senha"/>
+            <input type="password" formControlName="senhaConfirmacao" autocomplete="off" value="" placeholder="Confirme sua senha"/>
             
-            <a (click)="cadastrar()" class="enter-buttom green">
+            <a (click)="cadastrar(cadastroForm.value)" class="enter-buttom container" [ngClass]="{'green':!cadastroForm.invalid,'gray':cadastroForm.invalid}"> 
                 <span class="text-buttom">Continuar</span>
                 <svg class="arrow" width="27" height="27" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M16.8376 7.94605L10.6582 0.883677C10.4818 0.682081 10.2467 0.571426 9.99602 0.571426C9.74506 0.571426 9.51009 0.68224 9.3337 0.883677L8.77265 1.52503C8.5964 1.72631 8.49929 1.99516 8.49929 2.28181C8.49929 2.56831 8.5964 2.84622 8.77265 3.04749L12.3776 7.17655H0.924411C0.408021 7.17655 0 7.63857 0 8.22889V9.13559C0 9.72591 0.408021 10.2345 0.924411 10.2345H12.4185L8.77279 14.3866C8.59653 14.5882 8.49943 14.8498 8.49943 15.1364C8.49943 15.4227 8.59653 15.6881 8.77279 15.8895L9.33384 16.5288C9.51023 16.7304 9.7452 16.8403 9.99616 16.8403C10.2468 16.8403 10.4819 16.729 10.6583 16.5274L16.8378 9.46517C17.0146 9.26294 17.1118 8.99298 17.1111 8.70601C17.1117 8.41809 17.0146 8.14797 16.8376 7.94605Z" fill="white"/>
