--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -15,7 +15,7 @@
 </a>
 
 <div class="component-block strict">
-    <div class="center" class="form-group">
+    <div class="center" class="form-group" *ngIf="!loading">
         <form [formGroup]="cadastroForm" autocomplete="off">
             <p class="title">Peça sua conta e cartão de crédito do Gama Bank</p>
 
@@ -32,5 +32,10 @@
                 </svg>
             </a>
         </form>
+    </div>
+    <div class="d-flex justify-content-center spinner" *ngIf="loading">
+        <div class="spinner-border" role="status">
+        <span class="sr-only">Loading...</span>
+        </div>
     </div>
 </div>  
