--- a/src/app/account/menu/menu.component.html
+++ b/src/app/account/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="dash-menu">
     <img class="logo" src="assets/images/gama-menu-logo.png" alt="logo">
-    <a href="javascript:void(0);" [routerLink]="['./../dash']" class="btn-menu">
+    <a href="javascript:void(0);" [routerLink]="['./dash']" class="btn-menu">
         <svg width="29" height="29" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M21.9105 21.4929C20.8082 21.4929 19.7715 21.0637 18.9921 20.2846L14.778 16.0706C14.4823 15.7739 13.9665 15.7749 13.6708 16.0706L9.44133 20.3C8.66181 21.079 7.62513 21.5082 6.52278 21.5082H5.69238L11.0294 26.8454C12.6963 28.5121 15.3988 28.5121 17.0657 26.8454L22.4182 21.4929H21.9105Z" fill="white"/>
             <path d="M6.52314 6.58711C7.62549 6.58711 8.66216 7.01645 9.44155 7.79557L13.671 12.0257C13.9756 12.3302 14.473 12.3316 14.7783 12.0253L18.9923 7.8109C19.7718 7.03177 20.8085 6.60257 21.9109 6.60257H22.4184L17.066 1.25018C15.3992 -0.416696 12.6967 -0.416696 11.0298 1.25018L5.69287 6.58711H6.52314Z" fill="white"/>
