--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -17,7 +17,8 @@
                 </svg>
             </a>
 
-            <a [routerLink]="['/recoverypass']" class="purple-link first-child">Esqueci minha senha ></a>
+            <!--a [routerLink]="['/recoverypass']" class="purple-link first-child">Esqueci minha senha ></a-->
+            <a href="javascript:void(0);" (click)="naoDisponivel()" class="purple-link first-child">Esqueci minha senha ></a>
             <a [routerLink]="['/home']" class="purple-link">Ainda não sou cliente ></a>
         </form>
     </div>
