--- a/src/app/main/recoverypass/recoverypass.component.html
+++ b/src/app/main/recoverypass/recoverypass.component.html
@@ -1,12 +1,12 @@
 <div class="component-block">
-    <div class="center" class="form-group">
+    <div class="center" class="form-group" *ngIf="!loading">
         <form [formGroup]="senhaForm" autocomplete="off">
             <p class="title">Esqueci minha senha</p>
             <p>Confirme seu CPF e escolha sua nova senha</p>
 
-            <input type="text" autocomplete="off" id="loginCPF" name="loginCPF" value="" placeholder="Confirme seu CPF"/>
-            <input type="password" autocomplete="off" id="loginSenha" name="loginSenha" value="" placeholder="Digite sua nova senha"/>
-            <input type="password" autocomplete="off" id="loginSenhaConfirmation" name="loginSenhaConfirmation" value="" placeholder="Confirme sua nova senha"/>
+            <input type="text" autocomplete="off" formControlName="cpf" value="" placeholder="Confirme seu CPF" mask="000.000.000-00"/>
+            <input type="password" autocomplete="off" formControlName="senha" value="" placeholder="Digite sua nova senha"/>
+            <input type="password" autocomplete="off" formControlName="senhaConfirmacao" name="loginSenhaConfirmation" value="" placeholder="Confirme sua nova senha"/>
             
             <a (click)="recoverPassword()" class="enter-buttom container" [ngClass]="{'green':!senhaForm.invalid,'gray':senhaForm.invalid}">
                 <span class="text-buttom">Enviar</span>
@@ -15,5 +15,10 @@
                 </svg>
             </a>
         </form>
+    </div>
+    <div class="d-flex justify-content-center spinner" *ngIf="loading">
+        <div class="spinner-border" role="status">
+        <span class="sr-only">Loading...</span>
+        </div>
     </div>
 </div>  
